@@ -1,3 +1,8 @@
+2007-05-07 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
+
+	* Fixed some use-before-initalization bugs in tny-maemo-conic-device
+	* Don't try to disconnect in the dummy case there
+
 2007-05-06  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Moved some stuff around
